# dmarc-receiver

./: .gitignore  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yaml  example-smtpd.conf
.github/workflows/: docker.yml  rust.yml
dmarc-receiver/: Cargo.toml
dmarc-receiver/src/: main.rs
dmarc-receiver/src/exporters/: datadog.rs  elasticsearch.rs  mod.rs  webhook.rs
dmarc-receiver/src/parser/: dmarc_definition.rs  mod.rs
examples/: docker-compose.elasticsearch.yaml
