[package]
name = "dmarc-receiver"
version = "0.1.0"
authors = ["Wampie Driessen <wampiedriessen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
elasticsearch = "7.12.0-alpha.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
serde-xml-rs = "0.4.1"
base64 = "0.13"
zip = { version = "0.5", features = ["deflate"] }
